@@ -1,4 +1,5 @@
-DIST KontrolPack-2.0.2-src.zip 575392 RMD160 b461a2196c4c62880cc90bc326c7457fd11af855 SHA1 9e63f115562b99041ab1ec6da96ccfa9b0f181dc SHA256 0f2d5942a912e225e872b28fc3ce057831b48265fadaebf766298a3d7b4efcc9
-EBUILD kontrolpack-2.0.2.ebuild 935 RMD160 be532d888ca2d8d4863dbadb259617af66e875a1 SHA1 63e56dd891c672f596adac16fd26e932357f78e1 SHA256 e8ca0188c7e194174a27cde9b6142cda5a2d44e54d6bba97d81976ed0762a952
-MISC ChangeLog 440 RMD160 0cac0344ee36d65848a8c47b5098bc71f40f9919 SHA1 8cfec8df3fe29d9a6ecbfaed46e8b45a609550b9 SHA256 874a1ae8df1eb4f263f50c13c75ea707ac980816025403540b06276b9cd76f40
+DIST KontrolPack-2.0.2-src.tar.bz2 548797 RMD160 a61c8fd5ba3c745a8c64733d30d09dc786ee977f SHA1 89cd726b05ed7d21f5be6e42fff51579ba8c78e8 SHA256 7ccd9e81458ec1be3898640919237a803b48c9950e053686d33450c3670e2f60
+EBUILD kontrolpack-2.0.2-r1.ebuild 1156 RMD160 13c246672c8490fcc53bfb6ace0bead1f09ad9ec SHA1 a7deec14aac406b39fe11a83f4f52e6d1272d723 SHA256 d190ac67d8719632c5dbd6ef8843f0b724cb20f7c2ffc59b9e9c49c8cc2e5d0a
+MISC ChangeLog 645 RMD160 d0c768a35eeda5d3ebce7846b73749a2d955501c SHA1 a8359ddabd0718375f7d15c8b11337a4b9db906a SHA256 582c1bcf2c9ad3f6a6ba95f02efe58e43afa32bafa4a2442e7858e2fbb6b3407
+MISC ChangeLog.new~ 252 RMD160 f2a5956556b1a22d50d0a758d64c76af68c9a6eb SHA1 2fbc28027de7a3f6b846247b2cf31f8d8cd39b34 SHA256 cb3365a5f5d5159b56b72a92042b24af20d39a8487aa716db1f1e535d17fb8f3
 MISC metadata.xml 294 RMD160 a876c02ee69404aba92cd94beed6a238e0043581 SHA1 ac44a6cbf847ec1a492eaecbb7ffd6bce60a380d SHA256 43aeca91b633f1d854fba6e201a4321e46e96e4549361330926ea0e522cc00ba
